crates/shuffle/src/session/snapshots/shuffle__session__state__test__after_normal_resumes.snap
---
source: crates/shuffle/src/session/state.rs
expression: pipeline_snapshot(&pipeline)
---
PipelineSnapshot {
    recovery_pending: false,
    ready: Frontier {
        journals: [
            JournalFrontier {
                journal: "journal/A",
                binding: 0,
                producers: [
                    ProducerFrontier {
                        producer: Producer(01:00:00:00:00:00),
                        last_commit: Clock(250s 0ns),
                        hinted_commit: Clock(0s 0ns),
                        offset: -800,
                    },
                ],
                bytes_read_delta: 500,
                bytes_behind_delta: 2000,
            },
            JournalFrontier {
                journal: "journal/B",
                binding: 0,
                producers: [
                    ProducerFrontier {
                        producer: Producer(03:00:00:00:00:00),
                        last_commit: Clock(100s 0ns),
                        hinted_commit: Clock(0s 0ns),
                        offset: -300,
                    },
                ],
                bytes_read_delta: 300,
                bytes_behind_delta: -100,
            },
            JournalFrontier {
                journal: "journal/C",
                binding: 0,
                producers: [
                    ProducerFrontier {
                        producer: Producer(05:00:00:00:00:00),
                        last_commit: Clock(50s 0ns),
                        hinted_commit: Clock(0s 0ns),
                        offset: -200,
                    },
                ],
                bytes_read_delta: 150,
                bytes_behind_delta: 800,
            },
            JournalFrontier {
                journal: "journal/D",
                binding: 0,
                producers: [
                    ProducerFrontier {
                        producer: Producer(07:00:00:00:00:00),
                        last_commit: Clock(30s 0ns),
                        hinted_commit: Clock(0s 0ns),
                        offset: -150,
                    },
                ],
                bytes_read_delta: 100,
                bytes_behind_delta: 400,
            },
        ],
        flushed_lsn: [
            0/3000,
        ],
        latest_backfill_begin: {},
        latest_backfill_complete: {},
        unresolved_hints: 0,
    },
    unresolved: Frontier {
        journals: [],
        flushed_lsn: [],
        latest_backfill_begin: {},
        latest_backfill_complete: {},
        unresolved_hints: 0,
    },
    unresolved_count: 0,
    progressed: Frontier {
        journals: [],
        flushed_lsn: [],
        latest_backfill_begin: {},
        latest_backfill_complete: {},
        unresolved_hints: 0,
    },
}
