crates/shuffle/src/session/snapshots/shuffle__session__state__test__after_second_progressed.snap
---
source: crates/shuffle/src/session/state.rs
expression: pipeline_snapshot(&pipeline)
---
PipelineSnapshot {
    recovery_session: true,
    ready: Frontier {
        journals: [
            JournalFrontier {
                journal: "journal/A",
                binding: 0,
                producers: [
                    ProducerFrontier {
                        producer: Producer(01:00:00:00:00:00),
                        last_commit: Clock(200s 0ns),
                        hinted_commit: Clock(200s 0ns),
                        offset: -100,
                    },
                ],
                bytes_read_delta: 0,
                bytes_behind_delta: 0,
            },
        ],
        flushed_lsn: [
            0/1000,
        ],
        latest_backfill_begin: {},
        latest_backfill_complete: {},
        binding_gap_floors: {},
        unresolved_hints: 0,
    },
    unresolved: Frontier {
        journals: [],
        flushed_lsn: [],
        latest_backfill_begin: {},
        latest_backfill_complete: {},
        binding_gap_floors: {},
        unresolved_hints: 0,
    },
    unresolved_count: 0,
    progressed: Frontier {
        journals: [
            JournalFrontier {
                journal: "journal/A",
                binding: 0,
                producers: [
                    ProducerFrontier {
                        producer: Producer(01:00:00:00:00:00),
                        last_commit: Clock(250s 0ns),
                        hinted_commit: Clock(0s 0ns),
                        offset: -800,
                    },
                ],
                bytes_read_delta: 500,
                bytes_behind_delta: 2000,
            },
            JournalFrontier {
                journal: "journal/B",
                binding: 0,
                producers: [
                    ProducerFrontier {
                        producer: Producer(03:00:00:00:00:00),
                        last_commit: Clock(100s 0ns),
                        hinted_commit: Clock(0s 0ns),
                        offset: -300,
                    },
                ],
                bytes_read_delta: 300,
                bytes_behind_delta: -100,
            },
            JournalFrontier {
                journal: "journal/C",
                binding: 0,
                producers: [
                    ProducerFrontier {
                        producer: Producer(05:00:00:00:00:00),
                        last_commit: Clock(50s 0ns),
                        hinted_commit: Clock(0s 0ns),
                        offset: -200,
                    },
                ],
                bytes_read_delta: 150,
                bytes_behind_delta: 800,
            },
        ],
        flushed_lsn: [
            0/2000,
        ],
        latest_backfill_begin: {},
        latest_backfill_complete: {},
        binding_gap_floors: {},
        unresolved_hints: 0,
    },
}
