crates/shuffle/src/session/snapshots/shuffle__session__state__test__build_start_read.snap
---
source: crates/shuffle/src/session/state.rs
expression: "&[start_read_f, start_read_g]"
---
[
    StartRead {
        binding: 0,
        spec: Some(
            JournalSpec {
                name: "test/journal/F",
                replication: 0,
                labels: Some(
                    LabelSet {
                        labels: [
                            Label {
                                name: "estuary.dev/key-begin",
                                value: "10000000",
                                prefix: false,
                            },
                            Label {
                                name: "estuary.dev/key-end",
                                value: "20000000",
                                prefix: false,
                            },
                        ],
                    },
                ),
                fragment: None,
                flags: 0,
                max_append_rate: 0,
                suspend: None,
            },
        ),
        create_revision: 1,
        mod_revision: 1,
        route: None,
        checkpoint: [
            ProducerFrontier {
                producer: 72057594037927936,
                last_commit: 1955086864000000000,
                hinted_commit: 1955086880000000000,
                offset: -500,
            },
        ],
    },
    StartRead {
        binding: 0,
        spec: Some(
            JournalSpec {
                name: "test/journal/G",
                replication: 0,
                labels: Some(
                    LabelSet {
                        labels: [
                            Label {
                                name: "estuary.dev/key-begin",
                                value: "10000000",
                                prefix: false,
                            },
                            Label {
                                name: "estuary.dev/key-end",
                                value: "20000000",
                                prefix: false,
                            },
                        ],
                    },
                ),
                fragment: None,
                flags: 0,
                max_append_rate: 0,
                suspend: None,
            },
        ),
        create_revision: 1,
        mod_revision: 1,
        route: None,
        checkpoint: [],
    },
]
