crates/shuffle/src/session/snapshots/shuffle__session__state__test__checkpoint_progression.snap
---
source: crates/shuffle/src/session/state.rs
expression: "&pipeline.ready"
---
Frontier {
    journals: [
        JournalFrontier {
            journal: "journal/A",
            binding: 0,
            producers: [
                ProducerFrontier {
                    producer: Producer(01:00:00:00:00:00),
                    last_commit: Clock(40s 0ns),
                    hinted_commit: Clock(40s 0ns),
                    offset: -800,
                },
            ],
            bytes_read_delta: 1200,
            bytes_behind_delta: 5000,
        },
        JournalFrontier {
            journal: "journal/B",
            binding: 0,
            producers: [
                ProducerFrontier {
                    producer: Producer(03:00:00:00:00:00),
                    last_commit: Clock(20s 0ns),
                    hinted_commit: Clock(0s 0ns),
                    offset: -800,
                },
            ],
            bytes_read_delta: 900,
            bytes_behind_delta: -300,
        },
    ],
    flushed_lsn: [],
    latest_backfill_begin: {},
    latest_backfill_complete: {},
    binding_gap_floors: {},
    unresolved_hints: 0,
}
