crates/shuffle/src/session/snapshots/shuffle__session__state__test__cross_cohort_hint_preserved.snap
---
source: crates/shuffle/src/session/state.rs
expression: pipeline_snapshot(&pipeline)
---
PipelineSnapshot {
    recovery_session: false,
    ready: Frontier {
        journals: [],
        flushed_lsn: [],
        latest_backfill_begin: {},
        latest_backfill_complete: {},
        unresolved_hints: 0,
    },
    unresolved: Frontier {
        journals: [
            JournalFrontier {
                journal: "journal/B",
                binding: 1,
                producers: [
                    ProducerFrontier {
                        producer: Producer(01:00:00:00:00:00),
                        last_commit: Clock(100s 0ns),
                        hinted_commit: Clock(300s 0ns),
                        offset: -50,
                    },
                ],
                bytes_read_delta: 0,
                bytes_behind_delta: 0,
            },
        ],
        flushed_lsn: [],
        latest_backfill_begin: {},
        latest_backfill_complete: {},
        unresolved_hints: 1,
    },
    unresolved_count: 1,
    progressed: Frontier {
        journals: [],
        flushed_lsn: [],
        latest_backfill_begin: {},
        latest_backfill_complete: {},
        unresolved_hints: 0,
    },
}
